# essential_hydra_resolvers

./: README.md  pyproject.toml
hydra_plugins/essential_resolvers/: __init__.py  resolvers.py
tests/: test_from_env.py  test_get_attr.py  test_torch_device.py
